e.txt
In file included from src/broker/worker.hpp:2:0,
                 from src/broker/worker.cpp:1:
lib/cppzmq/zmq.hpp: In constructor ‘DatabaseDaemon::DatabaseDaemon(zmq::context_t&, int)’:
lib/cppzmq/zmq.hpp:401:9: error: ‘zmq::context_t::context_t(const zmq::context_t&)’ is private
         context_t (const context_t&) ZMQ_DELETED_FUNCTION;
         ^
In file included from src/broker/worker.hpp:8:0,
                 from src/broker/worker.cpp:1:
src/broker/db_daemon.hpp:10:86: error: within this context
         DatabaseDaemon(zmq::context_t &c, int sock_type): ctx(c), relay(ctx,sock_type) {};
                                                                                      ^
src/broker/db_daemon.hpp:10:86: error: use of deleted function ‘zmq::context_t::context_t(const zmq::context_t&)’
In file included from src/broker/worker.hpp:2:0,
                 from src/broker/worker.cpp:1:
lib/cppzmq/zmq.hpp:401:9: note: declared here
         context_t (const context_t&) ZMQ_DELETED_FUNCTION;
         ^
In file included from src/broker/worker.cpp:1:0:
src/broker/worker.hpp: In constructor ‘SkidooshBrokerTask::SkidooshBrokerTask()’:
src/broker/worker.hpp:12:87: error: no matching function for call to ‘DatabaseDaemon::DatabaseDaemon()’
         SkidooshBrokerTask() : ctx(1), frontend(ctx,ZMQ_ROUTER),backend(ctx,ZMQ_DEALER) {}; 
                                                                                       ^
In file included from src/broker/worker.hpp:8:0,
                 from src/broker/worker.cpp:1:
src/broker/db_daemon.hpp:10:9: note: candidate: DatabaseDaemon::DatabaseDaemon(zmq::context_t&, int)
         DatabaseDaemon(zmq::context_t &c, int sock_type): ctx(c), relay(ctx,sock_type) {};
         ^
src/broker/db_daemon.hpp:10:9: note:   candidate expects 2 arguments, 0 provided
src/broker/db_daemon.hpp:8:7: note: candidate: DatabaseDaemon::DatabaseDaemon(DatabaseDaemon&&)
 class DatabaseDaemon {
       ^
src/broker/db_daemon.hpp:8:7: note:   candidate expects 1 argument, 0 provided
In file included from src/broker/broker.cpp:1:0:
lib/cppzmq/zmq.hpp: In constructor ‘DatabaseDaemon::DatabaseDaemon(zmq::context_t&, int)’:
lib/cppzmq/zmq.hpp:401:9: error: ‘zmq::context_t::context_t(const zmq::context_t&)’ is private
         context_t (const context_t&) ZMQ_DELETED_FUNCTION;
         ^
In file included from src/broker/worker.hpp:8:0,
                 from src/broker/broker.cpp:5:
src/broker/db_daemon.hpp:10:86: error: within this context
         DatabaseDaemon(zmq::context_t &c, int sock_type): ctx(c), relay(ctx,sock_type) {};
                                                                                      ^
src/broker/db_daemon.hpp:10:86: error: use of deleted function ‘zmq::context_t::context_t(const zmq::context_t&)’
In file included from src/broker/broker.cpp:1:0:
lib/cppzmq/zmq.hpp:401:9: note: declared here
         context_t (const context_t&) ZMQ_DELETED_FUNCTION;
         ^
In file included from src/broker/broker.cpp:5:0:
src/broker/worker.hpp: In constructor ‘SkidooshBrokerTask::SkidooshBrokerTask()’:
src/broker/worker.hpp:12:87: error: no matching function for call to ‘DatabaseDaemon::DatabaseDaemon()’
         SkidooshBrokerTask() : ctx(1), frontend(ctx,ZMQ_ROUTER),backend(ctx,ZMQ_DEALER) {}; 
                                                                                       ^
In file included from src/broker/worker.hpp:8:0,
                 from src/broker/broker.cpp:5:
src/broker/db_daemon.hpp:10:9: note: candidate: DatabaseDaemon::DatabaseDaemon(zmq::context_t&, int)
         DatabaseDaemon(zmq::context_t &c, int sock_type): ctx(c), relay(ctx,sock_type) {};
         ^
src/broker/db_daemon.hpp:10:9: note:   candidate expects 2 arguments, 0 provided
src/broker/db_daemon.hpp:8:7: note: candidate: DatabaseDaemon::DatabaseDaemon(DatabaseDaemon&&)
 class DatabaseDaemon {
       ^
src/broker/db_daemon.hpp:8:7: note:   candidate expects 1 argument, 0 provided
In file included from src/broker/db_daemon.hpp:4:0,
                 from src/broker/db_daemon.cpp:1:
lib/cppzmq/zmq.hpp: In constructor ‘DatabaseDaemon::DatabaseDaemon(zmq::context_t&, int)’:
lib/cppzmq/zmq.hpp:401:9: error: ‘zmq::context_t::context_t(const zmq::context_t&)’ is private
         context_t (const context_t&) ZMQ_DELETED_FUNCTION;
         ^
In file included from src/broker/db_daemon.cpp:1:0:
src/broker/db_daemon.hpp:10:86: error: within this context
         DatabaseDaemon(zmq::context_t &c, int sock_type): ctx(c), relay(ctx,sock_type) {};
                                                                                      ^
src/broker/db_daemon.hpp:10:86: error: use of deleted function ‘zmq::context_t::context_t(const zmq::context_t&)’
In file included from src/broker/db_daemon.hpp:4:0,
                 from src/broker/db_daemon.cpp:1:
lib/cppzmq/zmq.hpp:401:9: note: declared here
         context_t (const context_t&) ZMQ_DELETED_FUNCTION;
         ^
src/broker/db_daemon.cpp: In member function ‘void DatabaseDaemon::work()’:
src/broker/db_daemon.cpp:8:55: error: ‘command’ was not declared in this scope
             redis3m::reply r = conn->run(command("GET") << *it);
                                                       ^
src/broker/db_daemon.cpp:8:55: note: suggested alternative:
In file included from /usr/local/include/redis3m/redis3m.hpp:8:0,
                 from src/broker/db_daemon.hpp:5,
                 from src/broker/db_daemon.cpp:1:
/usr/local/include/redis3m/command.h:12:7: note:   ‘redis3m::command’
 class command
       ^
make: *** [broker] Error 1
